grammar.js
    source_file: ($) => seq(optional($.shebang), optional(root($))),

    line_comment: (_) =>
      token(seq(
        "//",
        /[^\r\n\v\f\u0085\u2028\u2029]*/,
      )),

    // Markup mode

    content: ($) => markupContent($),

    _section_content: ($) =>
      markupContent($, {requireLeadingSeparator: true}),

    _list_inline_body: ($) =>
      seq(
        $._markup_nonspace_inline,
        repeat($._markup_inline),
      ),

    list_body: ($) =>
      seq(
        $._list_body_segment,
        repeat(seq(
          $._list_continuation_gap,
          repeat(choice($.line_comment, $.block_comment)),
          optional($._list_body_segment),
        )),
      ),

    _list_continuation_gap: ($) =>
      // The scanner only validates indentation and leaves the actual newline or
      // parbreak to markup rules. That keeps blank-line paragraph boundaries
      // visible inside list items instead of hiding them in a continuation token.
      seq(
        $._list_continuation,
        $._markup_separator,
        optional($._markup_indent),
      ),

    _list_body_segment: ($) =>
      choice(
        $._list_inline_body,
        $._heading_line,
        $.bullet_list_item,
        $.numbered_list_item,
        $.term_list_item,
      ),

    text: ($) =>
      // `_word` stays hidden so prose is one text run rather than one public
      // child per word. The internal split remains useful because spaces can be
      // either ordinary text gaps or the start of another inline construct.
      prec.right(seq(
        $._word,
        repeat(seq($._markup_word_gap, $._word)),
      )),

    // The high-precedence alternative keeps word-internal underscores and
    // stars out of emphasis parsing without scanner-maintained previous-token
    // state. Typst excludes CJK and Korean scripts from this word-boundary
    // protection.
    _word: (_) =>
      choice(
        token(prec(3, MARKUP_WORD_WITH_INTERNAL_MARKER)),
        token(prec(-1, /[^ \t\r\n\v\f\u0085\u2028\u2029\\`$#<@*_\'"\[\]~:]+/)),
        token(prec(-3, /[<@*_\[~`$:]/)),
      ),

    // General markup brackets may contain arbitrary markup and paragraph
    // breaks. More restrictive bracket rules below preserve the newline policy
    // of headings and emphasis constructs.
    heading: ($) =>
      prec.right(seq(
        field("marker", $.heading_marker),
        optional(choice(
          seq(
            field("separator", $._markup_space),
            optional(seq(
              field("body", $.heading_body),
            )),
          ),
          seq(
            $.block_comment,
            optional(seq(
              optional(field("separator", $._markup_space)),
              field("body", $.heading_body),
            )),
          ),
          field("body", $.heading_body),
        )),
      )),

    section: ($) =>
      choice(
        prec.dynamic(3, prec.right(2, seq(
          optional($._markup_indent),
          field("heading", $.heading),
          sectionLabelTail($),
          optional(field("body", alias($._section_content, $.content))),
        ))),
        prec.dynamic(2, prec.right(2, seq(
          optional($._markup_indent),
          field("heading", $.heading),
          optional(sectionTrailingTail($)),
          optional(field("body", alias($._section_content, $.content))),
        ))),
      ),

    heading_body: ($) =>
      seq(
        $._heading_nonspace,
        repeat(choice(
          $._heading_nonspace,
          seq($._markup_space, $._heading_nonspace),
        )),
      ),

    _heading_nonspace: ($) =>
      markupInlineSet($, {
        label: false,
        bracket: alias($._heading_bracketed_text, $.bracketed_text),
      }),

    bullet_list_item: ($) =>
      simpleListItem($, $.bullet_list_marker),

    term_list_item: ($) =>
      seq(
        field("marker", $.term_list_marker),
        optional(field("separator", $._markup_space)),
        optional(field("term", $._list_inline_body)),
        ":",
        optional(field("description_separator", $._markup_space)),
        optional(field("description", $.list_body)),
        $._list_end,
      ),

    raw: ($) =>
      seq(
        alias($._raw_open, $.raw_delimiter),
        optional(field("language", $.raw_language)),
        optional(field("content", $.raw_content)),
        alias($._raw_close, $.raw_delimiter),
      ),

    label: (_) => token(seq("<", LABEL_ID, ">")),

    embedded_code: ($) =>
      prec.dynamic(1, seq(
        alias($._hash, "#"),
        embeddedRootBody($, CODE_CONTEXT.embeddedRoot),
      )),

    content_block: ($) => contentBlock($),

    equation: ($) =>
      seq(
        "$",
        optional(field("body", $.math)),
        optional(mathSpaceRun($)),
        "$",
      ),

    // Code mode

    _code_block_body: ($) =>
      choice(
        // Blank code blocks may contain newlines, but they should not expose an
        // empty wrapper or separator as a public body child.
        repeat1($._code_newline),
        prec.right(seq(
          repeat($._code_newline),
          field("body", $._code_item),
          repeat(seq($._code_separator, field("body", $._code_item))),
          optional($._code_separator),
        )),
      ),

    _embedded_statement_terminator: ($) =>
      choice(";", $._embedded_statement_end),

    malformed_embedded_code: ($) =>
      embeddedMalformed($._embedded_statement_terminator),

    incomplete_let_binding: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated($, "let"),
        embeddedTerminated(
          $,
          "let",
          field("name", $.identifier),
          optional(field(
            "parameters",
            alias($._immediate_parameters, $.parameters),
          )),
          "=",
        ),
        embeddedTerminated(
          $,
          "let",
          field(
            "pattern",
            choice(
              $.discard_pattern,
              $.destructuring_pattern,
            ),
          ),
          "=",
        ),
      )),

    incomplete_set_rule: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated($, "set"),
        embeddedTerminated(
          $,
          "set",
          field(
            "target",
            contextRule($, CODE_CONTEXT.stopped, "set_target"),
          ),
        ),
        embeddedTerminated(
          $,
          "set",
          field(
            "target",
            contextRule($, CODE_CONTEXT.stopped, "set_target"),
          ),
          $._code_argument_ahead,
          $._embedded_unclosed_set_arguments,
        ),
      )),

    incomplete_show_rule: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated($, "show"),
        embeddedTerminated(
          $,
          "show",
          field("selector", $._stopped_expression),
        ),
      )),

    incomplete_module_import: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated($, "import"),
        embeddedTerminated(
          $,
          "import",
          field("source", $._stopped_expression),
          ":",
        ),
      )),

    incomplete_module_include: ($) =>
      embeddedRecovery(embeddedTerminated($, "include")),

    incomplete_return_expression: ($) =>
      embeddedRecovery(choice(
        embeddedTerminated(
          $,
          "return",
          field("operator", choice("+", "-", "−", "not")),
        ),
        embeddedTerminated(
          $,
          $._embedded_return_dangling_operator,
        ),
      )),

    // Top-level/code-block expressions are newline-strict. The only contextual
    // continuations are a following dot and `else`. Delimited constructs use
    // `_continued_expression`, which mirrors Typst's AtNewline::Continue mode.
    _continued_expression: ($) => $._continued_assignment,

    _stopped_expression: ($) => $._stopped_assignment,

    identifier: (_) => token(IDENT),
    numeric: ($) =>
      prec(1, seq(
        field("value", choice($.integer, $.float)),
        field("unit", $.unit),
      )),

    string: ($) =>
      seq(
        '"',
        repeat(choice(
          $.string_content,
          $.string_escape,
          $.malformed_escape,
        )),
        '"',
      ),

    string_content: (_) => token.immediate(prec(2, /[^"\\]+/)),
    code_block: ($) =>
      seq(
        "{",
        optional(prec.dynamic(1, $._code_block_body)),
        closingCodeGap($),
        "}",
      ),

    parenthesized_expression: ($) =>
      prec.dynamic(2, seq(
          "(",
          codeGap($),
          field("expression", $._continued_expression),
          closingCodeGap($),
          ")",
        )),

    // `()` is an empty array. A non-empty array must either begin with a
    // spread or contain a comma; `(value)` remains parenthesized.
    arguments: ($) =>
      prec.right(choice(
        prec.dynamic(1, seq(
          $._code_argument_ahead,
          $._parenthesized_arguments,
          repeat1($._content_argument),
        )),
        seq($._code_argument_ahead, $._parenthesized_arguments),
        repeat1($._content_argument),
      )),

    _content_argument: ($) =>
      seq(
        $._code_argument_ahead,
        alias($._immediate_content_block, $.content_block),
      ),

    _parenthesized_arguments: ($) =>
      seq(
        token.immediate("("),
        choice(
          closingCodeGap($),
          seq(codeGap($), $._argument_body),
        ),
        ")",
      ),

    named_argument: ($) =>
      prec.dynamic(1, prec(1, seq(
        field("name", $.identifier),
        codeGap($),
        ":",
        codeGap($),
        field("value", $._continued_expression),
      ))),

    not_in_operator: (_) => seq("not", "in"),

    parameters: ($) => parametersRule($),

    destructuring_pattern: ($) =>
      parenthesizedList($, $._destructuring_item),

    _destructuring_item: ($) =>
      choice(
        $._binding_pattern,
        $.named_destructuring_item,
        $.destructuring_sink,
      ),

    _immediate_parameters: ($) =>
      parametersRule($, {immediate: true}),

    ...hiddenCodeVariants("set_target", setTarget),

    ...hiddenCodeVariants("set_target_field_access", setTargetFieldAccess),

    ...codeVariants("set_rule", setRule),

    ...codeVariants("show_rule", showRule),

    ...codeVariants("contextual_expression", contextualExpressionRule),

    ...codeVariants("if_expression", ifExpression),

    ...codeVariants("else_clause", elseClause),

    math: ($) =>
      prec.right(choice(
        mathSpaceRun($),
        seq(
          optional(mathSpaceRun($)),
          $._math_items,
        ),
      )),

    // Adjacent atoms need no separator. Spaced atoms are preceded by a
    // zero-width lookahead token, so spaces before a closing delimiter remain
    // available to the enclosing construct instead of committing to another
    // expression.
    _math_items: ($) =>
      seq(
        $._math_expression,
        repeat(choice(
          $._math_expression,
          seq(
            mathSpaceRun($, $._math_expression_space),
            $._math_expression,
          ),
        )),
      ),

    // Argument values exclude leading/trailing spaces; those are owned by the
    // argument list. Internal spaces use the same deterministic item sequence.
    math_sequence: ($) => $._math_items,

    math_text: (_) =>
      choice(
        token(prec(
          -1,
          new RustRegex(
            `[^${rustRanges(XID_START_RANGES)}${rustRanges(NUMBER_RANGES)}\\s$#_\\^/!'()\\[\\]{}|,;.&]`,
          ),
        )),
        // `!` is a factorial only when it is directly adjacent to its operand.
        // With intervening trivia Typst treats it as ordinary math text.
        token(prec(-3, /[.,;()\[\]{}|!]/)),
      ),

    math_field_access: ($) =>
      prec.left(
        PREC.mathCall,
        seq(
          field("object", choice($.math_identifier, $.math_field_access)),
          alias($._math_immediate_field_dot, "."),
          field(
            "field",
            alias(token.immediate(MATH_FIELD_IDENT), $.math_identifier),
          ),
        ),
      ),

    math_call: ($) =>
      prec(
        PREC.mathCall,
        seq(
          field("function", choice($.math_identifier, $.math_field_access)),
          field("arguments", $.math_arguments),
        ),
      ),

    math_arguments: ($) =>
      seq(
        alias($._math_immediate_lparen, "("),
        optional(mathSpaceRun($)),
        optional(choice(
          $._math_argument_list,
          $._math_leading_empty_argument_list,
        )),
        ")",
      ),

    _math_argument_list: ($) =>
      seq(
        $._math_argument,
        repeat(seq(
          $._math_argument_separator,
          optional($._math_argument),
        )),
        optional(mathCloseGap($)),
      ),

    // A leading separator represents an empty first cell, as used by matrix-like
    // calls (`mat(, a)`). Empty trailing and interior cells are represented by
    // the optional argument after each separator.
    _math_leading_empty_argument_list: ($) =>
      seq(
        $._math_argument_separator,
        optional($._math_argument),
        repeat(seq(
          $._math_argument_separator,
          optional($._math_argument),
        )),
        optional(mathCloseGap($)),
      ),

    math_named_argument: ($) =>
      prec(
        2,
        seq(
          field(
            "name",
            alias($._math_argument_identifier, $.identifier),
          ),
          token.immediate(":"),
          optional(mathSpaceRun($)),
          field("value", $.math_sequence),
        ),
      ),

    math_spread_argument: ($) =>
      seq(
        $.math_spread_operator,
        field("value", $.math_sequence),
      ),

    // Identifier/field plus immediate parentheses is always a math call.
    // Identifier applications therefore accept only non-parenthesis opening
    // delimiters; single alphabetic graphemes and other continuable atoms may
    // still apply to parentheses.
    math_application: ($) =>
      prec(
        PREC.mathCall,
        choice(
          seq(
            field(
              "function",
              choice(
                $.math_identifier,
                $.math_field_access,
              ),
            ),
            field(
              "argument",
              alias($._immediate_math_nonparen_delimited, $.math_delimited),
            ),
          ),
          seq(
            field(
              "function",
              choice(
                alias($._math_letter, $.math_letter),
                $.math_primes,
                $.string,
                $.escape,
              ),
            ),
            field(
              "argument",
              alias($._immediate_math_delimited, $.math_delimited),
            ),
          ),
        ),
      ),

    // A bare `|` is math text and `||` is a shorthand. Typst's paired vertical
    // delimiter is `[| ... |]`; it does not pair `|...|` or `||...||`.
    math_delimited: ($) =>
      seq(
        field("open", alias($._math_open_delimiter, $.math_delimiter)),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _immediate_math_delimited: ($) =>
      seq(
        field(
          "open",
          alias($._math_immediate_open, $.math_delimiter),
        ),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _immediate_math_nonparen_delimited: ($) =>
      seq(
        field(
          "open",
          alias(
            $._math_immediate_nonparen_open,
            $.math_delimiter,
          ),
        ),
        optional(field("body", $.math)),
        mathClose($),
      ),

    _math_open_delimiter: (_) => token(choice("[|", MATH_OPEN)),
